# log_mediator_cpp

./: CMakeLists.txt  Controller.cpp  Controller.h  FileOperator.cpp  FileOperator.h  HeartBeat.cpp  HeartBeat.h  LogGenerator.cpp  LogGenerator.h  README.md  Structs.h  fileoperator.cpp  fileoperator.h  main.cpp  t.cpp
